objects/AME_project_cloud_Req_for_Project_Change__c.object
<CustomObject>
    <fields>
        <fullName>AME_project_cloud_App_by_IT_Project_Mgr__c</fullName>
        <label>Approved by IT Project Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_App_by_Steering_Com__c</fullName>
        <label>Approved by Steering Committee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Change_Description__c</fullName>
        <label>Change Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Change_Justification__c</fullName>
        <label>Change Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Costs__c</fullName>
        <label>Costs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Plan__c</fullName>
        <label>Project Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Requests for Project Changes</relationshipLabel>
        <relationshipName>Requests_for_Project_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Quality__c</fullName>
        <label>Quality</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Scope__c</fullName>
        <label>Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CCPE_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPE_Budget_Approval_Date__c</fullName>
        <label>Budget Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Budget_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_III_Approval_Date__c</fullName>
        <label>Data Steward III Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_III__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Steward III</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes04Bb</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_II_Approval_Date__c</fullName>
        <label>Data Steward II Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_II__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Steward II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_I_Approval_Date__c</fullName>
        <label>Data Steward I Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Steward I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_II_Date__c</fullName>
        <label>ITSS Approval II Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_II__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITSS Approval II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_I_Date__c</fullName>
        <label>ITSS Approval I Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITSS Approval I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_IT_Approval_Date__c</fullName>
        <label>IT Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_IT_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Infrastructure_Approval_Date__c</fullName>
        <label>Infrastructure Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Infrastructure_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infrastructure Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPE_Project_Charter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Charter</label>
        <referenceTo>AME_project_cloud_Project_Charter__c</referenceTo>
        <relationshipLabel>Requests for Project Changes</relationshipLabel>
        <relationshipName>Requests_for_Project_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Solutions_Approval_Date__c</fullName>
        <label>Solutions Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Solutions_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solutions Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_II_Date__c</fullName>
        <label>Sponsor Approval II Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_II__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Approval II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_ChangesJ3Qi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_I_Date__c</fullName>
        <label>Sponsor Approval I Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Approval I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests_for_Project_Changes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request for Project Change</label>
    <nameField>
        <displayFormat>RPC-{0000000000}</displayFormat>
        <label>Request for Project Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests for Project Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCPE_RPCRequiresProjectCharter</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(),NOT(ISBLANK( AME_project_cloud_Project__r.CCPE_Project_Charter__r.CCPE_Request_for_Project_Change__c )))</errorConditionFormula>
        <errorMessage>This Project already has an open Request for Project Change. Please close the current Request for Project change prior to creating a new one.</errorMessage>
    </validationRules>
</CustomObject>